# tree-sitter-zmd

./: README.md  package.json
tree-sitter-markdown/: Cargo.toml  binding.gyp  package.json
tree-sitter-markdown-inline/: Cargo.toml  binding.gyp  grammar.js
tree-sitter-markdown-inline/bindings/rust/: lib.rs
tree-sitter-markdown-inline/src/: grammar.json
tree-sitter-markdown/src/: parser.c
tree-sitter-zmd/: grammar.js
tree-sitter-zmd-inline/: package.json
tree-sitter-zmd-inline/bindings/node/: binding.cc  index.js
tree-sitter-zmd-inline/src/: parser.c  scanner.c
tree-sitter-zmd/bindings/node/: binding.cc  index.js
tree-sitter-zmd/bindings/rust/: lib.rs
tree-sitter-zmd/src/: grammar.json  scanner.c
